--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode client && vite build",
-    "preview": "wrangler pages dev ./dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy"
+    "build": "vite build --mode client",
+    "preview": "vite preview",
+    "deploy": "$npm_execpath run build && wrangler deploy"
   },
   "private": true,
   "dependencies": {
@@ -15,7 +15,7 @@
     "google-auth-library": "9.14.1",
     "hono": "^4.2.2",
     "honox": "^0.1.12",
-    "zod": "^4.1.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
